Home Page styling done

--- a/client/src/Design.css
+++ b/client/src/Design.css
@@ -1,5 +1,5 @@
 .App{
-  font-family:  Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -18,7 +18,6 @@
   font-size: 16px;
 }
 
-
 .navbar{
   display: flex;
   justify-content: space-between;
@@ -30,7 +29,7 @@
 .logo{
   color: rgb(0, 0, 0);
   font-size: 36px;
-  font-weight: 900;
+  font-weight: Bolder;
   text-decoration: none;
   font-style: italic;
 }
@@ -42,8 +41,14 @@
 
 .navBarList{
   text-decoration: none;
-  color: #000
+  color: #000;
+  font-size: 25px;
 }
+
+
+/*--------------------------------------------------------------
+ > Hero Image
+--------------------------------------------------------------*/
 
 .homePageNewBanner{
   color: white;
@@ -66,12 +71,10 @@
 }
 
 .heroImgContent{
-  /* display: flex;
-  justify-content: center; */
   width: 920px;
   height: 500px;
   margin: 0 0 0 100px ;
-  background-image: linear-gradient(0deg, rgba(156, 160, 163, 0.52), rgba(0, 0, 0, 0.73));
+  background-image: linear-gradient(0deg, rgba(156, 160, 163, 0.1), rgba(0, 0, 0, 0.93));
   opacity: 0.9;
 }
 
@@ -93,176 +96,111 @@
 
 
 /*--------------------------------------------------------------
-# Footer
+ > Footer
 --------------------------------------------------------------*/
+
 #footer {
   font-size: 14px;
   background: #003479;;
 }
 
-#footer .footer-newsletter {
-  padding: 50px 0;
-  background: #f3f5fa;
-  text-align: center;
-  font-size: 15px;
-  color: #444444;
-}
-
-#footer .footer-newsletter h4 {
-  font-size: 24px;
-  margin: 0 0 20px 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 600;
-  color: #37517e;
-}
-
-#footer .footer-newsletter form {
-  margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.06);
-  text-align: left;
-}
-
-#footer .footer-newsletter form input[type="email"] {
-  border: 0;
-  padding: 4px 8px;
-  width: calc(100% - 100px);
-}
-
-#footer .footer-newsletter form input[type="submit"] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px;
-  background: #47b2e4;
-  color: #fff;
-  transition: 0.3s;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-#footer .footer-newsletter form input[type="submit"]:hover {
-  background: #209dd8;
-}
-
-#footer .footer-top {
+#footer .upperFooter {
   padding: 60px 0 30px 0;
   background: #fff;
 }
 
-#footer .footer-top .footer-contact {
+#footer .upperFooter .fContact {
   margin-bottom: 30px;
+  text-align: left;
 }
 
-#footer .footer-top .footer-contact h3 {
-  font-size: 28px;
+#footer .upperFooter h3 {
   margin: 0 0 10px 0;
-  padding: 2px 0 2px 0;
   line-height: 1;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #37517e;
+  color: rgb(51, 49, 49);
+  font-size: 22px;
+  padding: 2px 0 10px 0;
+  font-style: italic;
 }
 
-#footer .footer-top .footer-contact p {
-  font-size: 14px;
+#footer .upperFooter .fContact p {
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Jost", sans-serif;
-  color: #5e5e5e;
+  font-size: 14px;
 }
 
-#footer .footer-top h4 {
-  font-size: 16px;
-  font-weight: bold;
-  color: #37517e;
-  position: relative;
-  padding-bottom: 12px;
+#footer .upperFooter h4 {
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(13, 78, 125);
+  padding: 2px 0 12px 0;
 }
 
-#footer .footer-top .footer-links {
-  margin-bottom: 30px;
-}
-
-#footer .footer-top .footer-links ul {
+#footer .upperFooter .footer-links ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-#footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #47b2e4;
-  font-size: 18px;
-  line-height: 1;
+#footer .upperFooter .footer-links ul i {
+  padding: 1px;
+  color: #003479;
 }
 
-#footer .footer-top .footer-links ul li {
-  padding: 10px 0;
+#footer .upperFooter .footer-links ul li {
+  padding: 10px 0 10px 155px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+
 }
 
-#footer .footer-top .footer-links ul li:first-child {
+#footer .upperFooter .footer-links ul li:first-child {
   padding-top: 0;
 }
 
-#footer .footer-top .footer-links ul a {
-  color: #777777;
-  transition: 0.3s;
+#footer .upperFooter .footer-links ul a {
+  color: rgb(51, 49, 49);
+  font-family: "Montserrat", sans-serif;
   display: inline-block;
   line-height: 1;
-}
-
-#footer .footer-top .footer-links ul a:hover {
-  text-decoration: none;
-  color: #47b2e4;
-}
-
-#footer .footer-top .social-links a {
   font-size: 18px;
-  display: inline-block;
-  background: #47b2e4;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
+  text-decoration: none;
 }
 
-#footer .footer-top .social-links a:hover {
-  background: #209dd8;
+#footer .bx {
+  font-family: "Montserrat", sans-serif;
+}
+
+
+#footer .upperFooter .footer-links ul a:hover {
+  color: #003479;
+}
+
+#footer .upperFooter .social-links a {
+  font-size: 28px;
+  background: #003479;
+  color: #fff;
+  padding: 8px 0;
+  margin: 0 4px 0 0;
+  display: inline-block;
+  line-height: 1;
+  text-align: center;
+  transition: 0.25s;
+  width: 45px;
+  height: 45px;
+}
+
+#footer .upperFooter .social-links a:hover {
+  background: rgb(235, 235, 0);
   color: #fff;
   text-decoration: none;
 }
 
 #footer .footer-bottom {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 17px 0;
   color: #fff;
 }
 
-#footer .copyright {
-  float: left;
-}
-
-#footer .credits {
-  float: right;
-  font-size: 13px;
-}
-
-#footer .credits a {
-  transition: 0.3s;
+#footer .copyright b{
+  color: rgb(235, 235, 0)
 }
