--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,218 @@
     transform: rotate(360deg);
   }
 }
+
+
+.App{
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+/* Top bar */
+.webAccessBar{
+  background-color: #003479;
+  line-height: 20px;
+  padding: 17px 120px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.webAccessBar a{
+  color: white;
+  font-size: 16px;
+}
+
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffffff;
+  line-height: 20px;
+  padding: 56px 120px;
+}
+
+.logo{
+  color: rgb(0, 0, 0);
+  font-size: 36px;
+  font-weight: Bolder;
+  text-decoration: none;
+  font-style: italic;
+}
+
+.logo span{
+  color: rgb(13, 78, 125);
+  text-decoration: underline;
+}
+
+.navBarList{
+  text-decoration: none;
+  color: #000;
+  font-size: 25px;
+}
+
+
+/*--------------------------------------------------------------
+ > Hero Image
+--------------------------------------------------------------*/
+
+.homePageNewBanner{
+  color: white;
+  font-size: 16px;
+  background-color: #003479;
+  line-height: 20px;
+  padding: 16px 120px;
+  font-weight: 800;
+  margin: 0;
+}
+
+.heroImg{
+  background-image: linear-gradient(to bottom, rgba(156, 160, 163, 0.52), rgba(0, 0, 0, 0.73)), url("https://img.freepik.com/free-photo/woman-male-driving-instructor-during-driving-test_52683-101120.jpg?w=1380&t=st=1687429186~exp=1687429786~hmac=a7bcc4415c2132807798a4e0adf762fb0bfab79ed65674ef3c43d9ec87fd19d7");
+  background-color: #cccccc;
+  height: 650px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.heroImgContent{
+  width: 920px;
+  height: 500px;
+  margin: 0 0 0 100px ;
+  background-image: linear-gradient(0deg, rgba(156, 160, 163, 0.1), rgba(0, 0, 0, 0.93));
+  opacity: 0.9;
+}
+
+.heroTxt{
+  text-align: left;
+  position: absolute;
+  top: 49%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  color: white;
+  padding: 40px 35px;
+  line-height: 40px;
+  font-weight: bolder;
+}
+
+.heroTxt h3{
+  color: rgb(235, 235, 0);
+}
+
+
+/*--------------------------------------------------------------
+ > Registration & Login
+--------------------------------------------------------------*/
+
+
+
+/*--------------------------------------------------------------
+ > Footer
+--------------------------------------------------------------*/
+
+#footer {
+  font-size: 14px;
+  background: #003479;;
+}
+
+#footer .upperFooter {
+  padding: 60px 0 30px 0;
+  background: #fff;
+}
+
+#footer .upperFooter .fContact {
+  margin-bottom: 30px;
+  text-align: left;
+}
+
+#footer .upperFooter h3 {
+  margin: 0 0 10px 0;
+  line-height: 1;
+  color: rgb(51, 49, 49);
+  font-size: 22px;
+  padding: 2px 0 10px 0;
+  font-style: italic;
+}
+
+#footer .upperFooter .fContact p {
+  line-height: 24px;
+  margin-bottom: 0;
+  font-size: 14px;
+}
+
+#footer .upperFooter h4 {
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(13, 78, 125);
+  padding: 2px 0 12px 0;
+}
+
+#footer .upperFooter .footer-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#footer .upperFooter .footer-links ul i {
+  padding: 1px;
+  color: #003479;
+}
+
+#footer .upperFooter .footer-links ul li {
+  padding: 10px 0 10px 155px;
+  display: flex;
+  align-items: flex-start;
+
+}
+
+#footer .upperFooter .footer-links ul li:first-child {
+  padding-top: 0;
+}
+
+#footer .upperFooter .footer-links ul a {
+  color: rgb(51, 49, 49);
+  font-family: "Montserrat", sans-serif;
+  display: inline-block;
+  line-height: 1;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+#footer .bx {
+  font-family: "Montserrat", sans-serif;
+}
+
+
+#footer .upperFooter .footer-links ul a:hover {
+  color: #003479;
+}
+
+#footer .upperFooter .social-links a {
+  font-size: 28px;
+  background: #003479;
+  color: #fff;
+  padding: 8px 0;
+  margin: 0 4px 0 0;
+  display: inline-block;
+  line-height: 1;
+  text-align: center;
+  transition: 0.25s;
+  width: 45px;
+  height: 45px;
+}
+
+#footer .upperFooter .social-links a:hover {
+  background: rgb(235, 235, 0);
+  color: #fff;
+  text-decoration: none;
+}
+
+#footer .footer-bottom {
+  padding: 17px 0;
+  color: #fff;
+}
+
+#footer .copyright b{
+  color: rgb(235, 235, 0)
+}
